name:                HForgeAPIClient
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/HForgeAPIClient#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/ViewDataApi
  exposed-modules:     ViewDataApi
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , bytestring
                     , filepath
                     , transformers
                     , aeson
                     , servant
                     , servant-client
                     , http-client
                     , text
  default-language:    Haskell2010

executable HForgeAPIClient-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , bytestring
                     , filepath
                     , transformers
                     , servant-client
                     , http-client
                     , http-client-tls
                     , HForgeAPIClient
  default-language:    Haskell2010

test-suite HForgeAPIClient-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HForgeAPIClient
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HForgeAPIClient
